--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -643,7 +643,19 @@
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ySg-i6-Z03">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="232"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blackLine" translatesAutoresizingMaskIntoConstraints="NO" id="DJb-OB-wBB">
+                                                            <rect key="frame" x="0.0" y="205" width="768" height="2"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="2" id="ddt-NN-DqD"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="DJb-OB-wBB" secondAttribute="bottom" constant="25" id="G3k-Hv-uyc"/>
+                                                        <constraint firstItem="DJb-OB-wBB" firstAttribute="leading" secondItem="ySg-i6-Z03" secondAttribute="leading" id="wR6-1A-8xU"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
@@ -787,9 +799,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="blackLine" destination="DJb-OB-wBB" id="0Lb-FL-Iv1"/>
                         <outlet property="csv" destination="khJ-6R-dkG" id="oad-v4-jUH"/>
                         <outlet property="emailTextField" destination="3I1-iK-30h" id="Bll-Di-lWV"/>
                         <outlet property="excelSwitch" destination="zgb-VS-7E9" id="9IA-rP-W43"/>
+                        <outlet property="exportView" destination="ySg-i6-Z03" id="9Ha-ne-FL0"/>
                         <outlet property="fileView" destination="ySg-i6-Z03" id="XAq-Z6-wze"/>
                         <outlet property="pdfSwitch" destination="vjM-GA-Zhb" id="dGr-Iq-fsa"/>
                     </connections>
